--- a/public/feedetails.html
+++ b/public/feedetails.html
@@ -100,79 +100,90 @@
     .content {
       flex-grow: 1;
       background-color: white;
-      padding: 40px;
-    }
-
-    .fee-wrapper {
-      max-height: 600px;
-      overflow-y: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       padding: 30px;
-      background: #ffffff;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      border: 1px solid #ddd;
     }
 
-    .main-heading {
-      text-align: center;
-      font-size: 22px;
-      margin-bottom: 30px;
-      background: #e3f2ff;
-      padding: 15px;
-      border-radius: 10px;
-      color: #0b5394;
-      font-weight: bold;
-    }
+ .fee-details {
+  background: linear-gradient(to right, #fefefe, #f4f9fd);
+  color: #2c3e50;
+  padding: 40px 50px;
+  border-radius: 20px;
+  width: 95%;
+  max-width: 1100px;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+  border: 1px solid #e3eaf5;
+  transition: all 0.3s ease;
+  overflow-x: auto;
+}
 
-    .fee-card {
-      margin-bottom: 30px;
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      background: #f9fcff;
-    }
+.fee-details:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.2);
+}
 
-    .fee-card h3 {
-      text-align: center;
-      background: #d8ecff;
-      color: #1f4e8c;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
+.fee-details {
+  background: #ffffff;
+  color: #333;
+  padding: 35px 40px;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 1000px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+  border: 1px solid #e0e0e0;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow-x: auto;
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 17px;
-    }
+.fee-details:hover {
+  transform: scale(1.01);
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.25);
+}
 
-    thead tr {
-      background-color: #f5f7fa;
-      color: #333;
-    }
+.fee-details h2 {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 24px;
+  color: #1f75cb;
+  background: rgba(31, 117, 203, 0.1);
+  padding: 12px;
+  border-radius: 10px;
+}
 
-    th, td {
-      padding: 12px 15px;
-      text-align: right;
-      border-bottom: 1px solid #ddd;
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 17px;
+}
 
-    th:first-child, td:first-child {
-      text-align: left;
-    }
+thead tr {
+  background-color: #f5f7fa;
+  color: #333;
+}
 
-    tbody tr:hover {
-      background-color: #f0f8ff;
-    }
+th, td {
+  padding: 12px 15px;
+  text-align: right;
+  border-bottom: 1px solid #ddd;
+}
 
-    tfoot tr {
-      background-color: #e6f0ff;
-      font-weight: bold;
-      color: #0b3e75;
-      border-top: 2px solid #d0e3ff;
-    }
+th:first-child, td:first-child {
+  text-align: left;
+}
+
+tbody tr:hover {
+  background-color: #f0f8ff;
+}
+
+tfoot tr {
+  background-color: #e6f0ff;
+  font-weight: bold;
+  color: #0b3e75;
+  border-top: 2px solid #d0e3ff;
+}
+
 
     @media (max-width: 768px) {
       .container {
@@ -188,9 +199,10 @@
         padding: 15px;
       }
 
-      .fee-wrapper {
-        max-height: 400px;
+      .fee-details {
+        width: 100%;
         padding: 20px;
+        overflow-x: auto;
       }
     }
   </style>
@@ -215,9 +227,8 @@
 
     <!-- Content -->
     <div class="content">
-      <div class="fee-wrapper">
-        <h2 class="main-heading">📘 Year-wise Fee Details</h2>
-        <div id="feeCardsContainer"></div>
+      <div class="fee-details">
+        <!-- Filled by JS -->
       </div>
     </div>
   </div>
@@ -232,8 +243,8 @@
       if (!res.success) throw new Error("Fee data not found.");
 
       const data = res.data;
-      const container = document.getElementById("feeCardsContainer");
-      container.innerHTML = "";
+      const container = document.querySelector(".fee-details");
+      container.innerHTML = `<h2>📘 Year-wise Fee Details</h2>`;
 
       data.forEach(({ year, structure, paid, fines }) => {
         const items = [
@@ -268,8 +279,8 @@
         });
 
         container.innerHTML += `
-          <div class="fee-card">
-            <h3>📅 Academic Year ${year}</h3>
+          <div class="fee-details" style="margin-top: 25px;">
+            <h2>📅 Academic Year ${year}</h2>
             <table>
               <thead>
                 <tr>
@@ -305,5 +316,6 @@
     window.location.replace("index.html");
   }
 </script>
+
 </body>
 </html>
