--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -189,8 +189,7 @@
         bus: parseFloat(document.getElementById("bus").value) || 0,
         university: parseFloat(document.getElementById("university").value) || 0,
         semester: parseFloat(document.getElementById("semester").value) || 0,
-        library: parseFloat(document.getElementById("library").value) || 0,
-        fines: parseFloat(document.getElementById("fines").value) || 0
+        library: parseFloat(document.getElementById("library").value) || 0
       };
 
       if (!data.reg_no || !data.academic_year) {
