--- a/public/feedetails.html
+++ b/public/feedetails.html
@@ -237,7 +237,7 @@ tfoot tr {
   const userId = localStorage.getItem("userId");
   document.getElementById("userId").textContent = userId || "Unknown";
 
-  fetch(`https://crr-noc.onrender.com/yearwise-fee/${userId}`)
+  fetch(`http://localhost:3000/yearwise-fee/${userId}`)
     .then(res => res.json())
     .then(res => {
       if (!res.success) throw new Error("Fee data not found.");
