--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -176,7 +176,7 @@
     </div>
   </div>
 
-  <script>
+ <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
 
@@ -189,11 +189,11 @@
         bus: parseFloat(document.getElementById("bus").value) || 0,
         university: parseFloat(document.getElementById("university").value) || 0,
         semester: parseFloat(document.getElementById("semester").value) || 0,
-        library: parseFloat(document.getElementById("library").value) || 0,
+        library: parseFloat(document.getElementById("library").value) || 0
       };
 
       if (!data.reg_no || !data.academic_year) {
-        alert("Please enter both Reg. No and Academic Year.");
+        alert("⚠️ Please enter both Reg. No and Academic Year.");
         return;
       }
 
@@ -205,14 +205,14 @@
       .then(res => res.json())
       .then(response => {
         if (response.success) {
-          alert("✅ Fee updated successfully for Year " + data.academic_year);
+          alert(`✅ Fee updated successfully for Year ${data.academic_year}`);
         } else {
-          alert("❌ Error updating fee: " + response.message);
+          alert("❌ Update failed: " + response.message);
         }
       })
       .catch(err => {
-        console.error("Fetch error:", err);
-        alert("❌ Server error while updating fee");
+        console.error("❌ Fetch error:", err);
+        alert("❌ Server error while updating fee.");
       });
     }
 
