--- a/public/verifybyqr.html
+++ b/public/verifybyqr.html
@@ -149,45 +149,46 @@
 <script>
   const urlParams = new URLSearchParams(window.location.search);
   const userId = urlParams.get("userId");
+  const year = urlParams.get("year");
 
   const studentIdPara = document.getElementById("student-id");
   const resultDiv = document.getElementById("result");
 
-  if (userId) {
-    studentIdPara.textContent = `User ID: ${userId}`;
+  if (userId && year) {
+    studentIdPara.textContent = `User ID: ${userId} | Year: ${year}`;
 
     fetch(`https://crr-noc.onrender.com/fee-status/${userId}`)
       .then((res) => res.json())
       .then((data) => {
-        if (!data.success || !data.years) {
-          showError("❌ Error: Invalid or missing data.");
+        if (!data.success) {
+          showError("❌ Error: Unable to fetch fee status.");
           return;
         }
 
-        const keys = ["tuition", "hostel", "bus", "university", "semester", "library", "fines"];
-        let allYearsCleared = true;
-
-        for (const year in data.years) {
-          const expected = data.years[year].expected || {};
-          const paid = data.years[year].paid || {};
-
-          for (const key of keys) {
-            const expectedAmount = parseFloat(expected[key]) || 0;
-            const paidAmount = parseFloat(paid[key]) || 0;
-
-            if (paidAmount < expectedAmount) {
-              allYearsCleared = false;
-              break;
-            }
-          }
-
-          if (!allYearsCleared) break;
+        const yearData = data.years?.[year];
+        if (!yearData) {
+          showError(`❌ No fee data available for Year ${year}`);
+          return;
         }
 
-        if (allYearsCleared) {
-          showSuccess("✅ Eligible for NOC");
+        const expected = yearData.expected || {};
+        const paid = yearData.paid || {};
+        const keys = ["tuition", "hostel", "bus", "university", "semester", "library", "fines"];
+        
+        let totalExpected = 0;
+        let totalPaid = 0;
+
+        keys.forEach((key) => {
+          totalExpected += parseFloat(expected[key]) || 0;
+          totalPaid += parseFloat(paid[key]) || 0;
+        });
+
+        console.log(`Year ${year} - Expected: ₹${totalExpected}, Paid: ₹${totalPaid}`);
+
+        if (totalPaid >= totalExpected && totalExpected > 0) {
+          showSuccess(`✅ Eligible for NOC (Year ${year})`);
         } else {
-          showError("❌ Not Eligible for NOC. Dues remaining.");
+          showError(`❌ Not Eligible for NOC (Year ${year})`);
         }
       })
       .catch((err) => {
@@ -195,8 +196,7 @@
         showError("❌ Error checking fee status.");
       });
   } else {
-    studentIdPara.textContent = "❌ Invalid or missing user ID.";
-    showError("❌ Cannot verify without User ID.");
+    showError("❌ Missing user ID or year in QR link.");
   }
 
   function showError(message) {
@@ -209,6 +209,7 @@
     resultDiv.textContent = message;
   }
 </script>
+
 
 </body>
 </html>
