--- a/public/generatenoc.html
+++ b/public/generatenoc.html
@@ -201,8 +201,9 @@
               <option value="3">3rd Year</option>
               <option value="4">4th Year</option>
             </select>
-            <button class="download">Download</button>
-            <button onclick="downloadCombinedNOC()" class="download" style="background-color: darkblue;">Download Combined 4-Year NOC</button>
+            <button type="button" class="download" onclick="downloadNOC()">Download</button>
+            <button type="button" onclick="downloadCombinedNOC()" class="download" style="background-color: darkblue;">Download Combined 4-Year NOC</button>
+
           </div>
         </div>
       </div>
@@ -213,22 +214,23 @@
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
 
-    document.querySelector(".download").addEventListener("click", () => {
-      const year = document.getElementById("nocYear").value;
-      if (!year) {
-        alert("Please select an academic year to generate NOC.");
-        return;
-      }
+function downloadNOC() {
+  const year = document.getElementById("nocYear").value;
+  if (!year) {
+    alert("Please select an academic year to generate NOC.");
+    return;
+  }
 
-      const userId = localStorage.getItem("userId");
-      const url = `http://crr-noc.onrender.com/generate-noc/${userId}?year=${year}`;
-      window.open(url, '_blank');
-    });
+  const userId = localStorage.getItem("userId");
+  const url = `https://crr-noc.onrender.com/generate-noc/${userId}?year=${year}`;
+  window.open(url, '_blank');
+}
+
           function downloadCombinedNOC() {
   const userId = localStorage.getItem("userId");
   if (!userId) return alert("User ID not found!");
 
-  fetch(`http://crr-noc.onrender.com/generate-combined-noc/${userId}`)
+  fetch(`https://crr-noc.onrender.com/generate-combined-noc/${userId}`)
     .then(res => {
       if (!res.ok) throw new Error("Failed to generate combined NOC");
       return res.blob();
