--- a/public/generatenoc.html
+++ b/public/generatenoc.html
@@ -202,7 +202,7 @@
               <option value="4">4th Year</option>
             </select>
             <button type="button" class="download" onclick="downloadNOC()">Download</button>
-            <button type="button" onclick="downloadCombinedNOC()" class="download" style="background-color: darkblue;">Download Combined 4-Year NOC</button>
+            <button type="button" onclick="downloadCombinedNOC()" class="download" style="background-color: darkblue;">Download Final Clearance Certificate</button>
 
           </div>
         </div>
