--- a/public/verifynoc.html
+++ b/public/verifynoc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verify NOC</title>
+  <title>Add Student</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
     * {
@@ -72,15 +72,6 @@
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
     }
 
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
     .logout {
       background-color: #f09000;
       color: white;
@@ -108,79 +99,52 @@
       align-items: center;
     }
 
-.verify-noc-box {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-  padding: 35px 30px;
-  border-radius: 20px;
-  max-width: 450px;
-  width: 100%;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  color: white;
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.verify-noc-box:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-
-    .verify-noc-box h2 {
+    .form-container {
+      background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+      padding: 30px;
+      border-radius: 20px;
+      max-width: 500px;
+      width: 100%;
       color: white;
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .form-container h2 {
       text-align: center;
       margin-bottom: 20px;
     }
 
-    .verify-noc-box label {
-      color: white;
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    label {
       font-weight: bold;
     }
 
- .verify-noc-box input {
-  width: 100%;
-  padding: 12px;
-  margin-top: 8px;
-  margin-bottom: 15px;
-  border-radius: 8px;
-  border: none;
-  font-size: 16px;
-  background-color: rgba(255, 255, 255, 0.95);
-  color: #000;
-  transition: box-shadow 0.3s ease;
-}
+    input, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: none;
+      margin-top: 5px;
+      color: #000;
+    }
 
-.verify-noc-box input:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(54, 169, 225, 0.8);
-}
-
-
- .verify-noc-box button {
-  width: 100%;
-  background-color: #1D73D2;
-  color: white;
-  border: none;
-  padding: 14px;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-
-.verify-noc-box button:hover {
-  background-color: #155ea8;
-  transform: scale(1.05);
-}
-
-
-    .verify-noc-box p {
-      text-align: center;
-      margin-top: 20px;
-      font-weight: bold;
+    button {
+      width: 100%;
+      padding: 12px;
       font-size: 16px;
+      background-color: #1D73D2;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #155ea8;
     }
   </style>
 </head>
@@ -194,7 +158,7 @@
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
-        <li class="active"><a href="#"><span>🔍</span> Verify NOC</a></li>
+        <li class="active"><a href="#"><span>➕</span> Add Student</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy policy</a></li>
       </ul>
@@ -203,12 +167,28 @@
 
     <!-- Main Content -->
     <div class="main">
-      <div class="verify-noc-box">
-        <h2>Verify NOC Status</h2>
-        <label for="regInput">Enter Registration Number</label>
-        <input type="text" id="regInput" placeholder="Eg:23B8xxxxxx" />
-        <button onclick="verifyNOC()">Check NOC Status</button>
-        <p id="nocResult"></p>
+      <div class="form-container">
+        <h2>Add New Student</h2>
+        <div class="form-group"><label>Name</label><input type="text" id="name"></div>
+        <div class="form-group"><label>Date of Birth</label><input type="date" id="dob"></div>
+        <div class="form-group"><label>Reg. No</label><input type="text" id="reg_no"></div>
+        <div class="form-group"><label>Unique ID</label><input type="text" id="unique_id"></div>
+        <div class="form-group"><label>Year</label>
+          <select id="year">
+            <option value="">Select Year</option>
+            <option value="1">1st Year</option>
+            <option value="2">2nd Year</option>
+            <option value="3">3rd Year</option>
+            <option value="4">4th Year</option>
+          </select>
+        </div>
+        <div class="form-group"><label>Course</label><input type="text" id="course"></div>
+        <div class="form-group"><label>Semester</label><input type="number" id="semester"></div>
+        <div class="form-group"><label>Aadhar No</label><input type="text" id="aadhar"></div>
+        <div class="form-group"><label>Mobile No</label><input type="tel" id="mobile"></div>
+        <div class="form-group"><label>Email</label><input type="email" id="email"></div>
+        <div class="form-group"><label>Password</label><input type="password" id="password"></div>
+        <button onclick="addStudent()">Submit</button>
       </div>
     </div>
   </div>
@@ -217,44 +197,47 @@
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
 
-    function verifyNOC() {
-      const reg = document.getElementById("regInput").value.trim();
-      const result = document.getElementById("nocResult");
+    function addStudent() {
+      const student = {
+        name: document.getElementById("name").value,
+        dob: document.getElementById("dob").value,
+        reg_no: document.getElementById("reg_no").value,
+        unique_id: document.getElementById("unique_id").value,
+        year: document.getElementById("year").value,
+        course: document.getElementById("course").value,
+        semester: document.getElementById("semester").value,
+        aadhar: document.getElementById("aadhar").value,
+        mobile: document.getElementById("mobile").value,
+        email: document.getElementById("email").value,
+        password: document.getElementById("password").value
+      };
 
-      if (!reg) {
-        result.textContent = "⚠️ Please enter a registration number.";
-        result.style.color = "orange";
-        return;
-      }
-
-      fetch(`https://crr-noc.onrender.com/staff/verify-noc/${reg}`)
-        .then(res => res.json())
-        .then(data => {
-          if (!data.success) {
-            result.textContent = "❌ Student not found or error occurred.";
-            result.style.color = "red";
-          } else if (data.eligible) {
-            result.textContent = `✅ NOC Approved for ${data.reg_no}`;
-            result.style.color = "green";
-          } else {
-            result.textContent = `❌ NOC Pending for ${data.reg_no}`;
-            result.style.color = "white";
-          }
-        })
-        .catch(err => {
-          console.error(err);
-          result.textContent = "⚠️ Error verifying NOC.";
-          result.style.color = "red";
-        });
+      fetch("https://crr-noc.onrender.com/add-student", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(student)
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          alert("✅ Student added successfully!");
+        } else {
+          alert("❌ Failed: " + data.message);
+        }
+      })
+      .catch(err => {
+        alert("❌ Server error");
+        console.error(err);
+      });
     }
 
     function logout() {
-    localStorage.removeItem("userId");
-    if ("caches" in window) {
-      caches.keys().then((names) => names.forEach((name) => caches.delete(name)));
+      localStorage.removeItem("userId");
+      if ("caches" in window) {
+        caches.keys().then(names => names.forEach(name => caches.delete(name)));
+      }
+      window.location.replace("index.html");
     }
-    window.location.replace("index.html");
-  }
   </script>
 </body>
 </html>
